<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="login_preferencescreen">
  <PreferenceCategory android:title="@string/connection">  
    <EditTextPreference
            android:key="server_adress"
            android:title="@string/server_address" />
    <EditTextPreference
            android:key="server_port"
            android:title="@string/server_port" 
            android:defaultValue="5003"/>
    <EditTextPreference
            android:key="mobile_number"
            android:title="@string/mobile_number" 
            android:defaultValue=""/>
    <CheckBoxPreference
            android:key="save_login"
            android:title="@string/save_login"
            android:defaultValue="true"/>
   </PreferenceCategory>         
</PreferenceScreen> 
