<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  
<ImageView android:src="@drawable/xivologin" 
           android:layout_width="wrap_content" 
           android:layout_height="wrap_content" 
           android:layout_gravity="center_horizontal"/>

    <TextView android:id="@+id/app_name"
        android:text = "@string/app_name"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
        
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal" 
    android:layout_height="wrap_content" 
    android:layout_marginTop="20dp" android:layout_width="270dp" android:layout_marginBottom="20dp">
    
    <TextView android:id="@+id/connect_status"
        android:text="@string/connected"   
        android:layout_gravity="center_horizontal" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        />

    <TextView android:id="@+id/login_text"
        android:text="@string/login"   
        android:layout_gravity="left" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <EditText android:id="@+id/login"
              android:layout_height="wrap_content"
              android:layout_gravity="right"
              android:layout_width="250dp" 
              android:layout_marginBottom="10dp"/> 
              
    <TextView android:id="@+id/password_text"
        android:text = "@string/password"   
        android:layout_gravity="left" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <EditText android:id="@+id/password"
              android:password="true"
              android:layout_height="wrap_content"
              android:layout_width="250dp"
              android:layout_gravity="right"
              android:layout_marginBottom="10dp" /> 
    
    <Button android:id="@+id/b_ok" 
        android:text="@string/ok"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="clickOnButtonOk"/>
</LinearLayout>

<TextView android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:layout_gravity="center_horizontal" 
          android:text="http://www.xivo.fr"/>

</LinearLayout>
